MarcoKitTests/TestData/error/object4.marco
--before
{}{}

--after
2-3: End of file expected, got '{'
